<resources>
    <string name="app_name">CursoAndroid</string>

    <string name="NameEmpresa">MiEmpresa</string>
    <string name="login_botonLogin">LOGIN</string>
    <string name="main_mi_perfil">Mi Perfil</string>
    <string name="main_gps">GPS</string>
    <string name="main_asistencia_mec_nica">Asistencia Mecánica</string>
    <string name="main_mis_mensajes">Mis Mensajes</string>
    <string name="main_notificaciones">Notificaciones</string>
    <string name="main_favoritos">Favoritos</string>
    <string name="title_activity_maps">Map</string>
    <string name="registrarse_login">Registrarse</string>
    <string name="tipo_usuario_register">Tipo Usuario:</string>
    <string name="tipo_documento_register">Tipo Documento:</string>
    <string name="nro_documento_register">Nro Documento:</string>
    <string name="usuario_register">Usuario:</string>
    <string name="contrasenia_register">Contraseña:</string>
    <string name="registrar_register">Registrar</string>
</resources>
