<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="3dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person_outline_black_24dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/main_mi_perfil"

                        android:textSize="20dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="3dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favorite_border_black_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/main_favoritos"
                    android:textSize="20dp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                android:id="@+id/tarjetaNotificaciones_Main"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="3dp"
                android:layout_weight="1">





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_speaker_notes_black_24dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/main_notificaciones"
                        android:textSize="20dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <android.support.v7.widget.CardView
                android:id="@+id/tarjetaAsistenciaMecanica"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="3dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_directions_car_black_24dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/main_asistencia_mec_nica"
                        android:textSize="20dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/tarjetaGPS"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="3dp"
                android:layout_weight="1">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_gps_fixed_black_24dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/main_gps"
                        android:textSize="20dp" />

                </LinearLayout>



            </android.support.v7.widget.CardView>


        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>